--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Minimal theme
-logo: /assets/img/Buggy.png
+logo: /assets/img/BigBuggy.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
