--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Minimal theme
+title: Buggy
 logo: /assets/img/BigBuggy.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: Interpreter for custom language named Buggy
 google_analytics:
 theme: jekyll-theme-minimal
